# autoclanker

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  devenv.nix  goalloop.audit.md  goalloop.charter.md  goalloop.history.jsonl  goalloop.tracker.md  mise.toml  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
.goalloop-support/: findings.schema.json  round1.findings.json  round1.ingest.json  round1.prompt.txt  round1.triage.json  round10.findings.json  round10.ingest.json  round10.prompt.txt  round10.triage.json  round2.findings.json  round2.ingest.json  round2.prompt.txt  round2.triage.json  round3.findings.json  round3.ingest.json  round3.prompt.txt  round3.triage.json  round4.findings.json  round4.ingest.json  round4.prompt.txt  round4.triage.json  round5.findings.json  round5.ingest.json  round5.prompt.txt  round5.triage.json  round6.findings.json  round6.ingest.json  round6.prompt.txt  round6.triage.json  round7.findings.json  round7.ingest.json  round7.prompt.txt  round7.triage.json  round8.findings.json  round8.ingest.json  round8.prompt.txt  round8.triage.json  round9.findings.json  round9.ingest.json  round9.prompt.txt  (+1 more)
.goalloop-support/triage9/: mkfacts.py
assets/: autoclanker_loop.mmd
autoclanker/: __init__.py  bigbets.py  clankergraph.py  cli.py  cli_graph.py  issue_seeder.py
autoclanker/bayes_layer/: __init__.py  acquisition.py  belief_compiler.py  belief_io.py  canonicalization.py  cli_adapter.py  cli_beliefs.py  cli_eval.py  cli_session.py  commit_policy.py  config.py  eval_contract.py  feature_encoder.py  frontier.py  live_upstreams.py  posterior_graph.py  query_policy.py  registry.py  reporting.py  review_bundle.py  session_store.py  surrogate_feasibility.py  surrogate_objective.py  types.py  ux_artifacts.py
bigbets/: __init__.py  cli.py  core.py  issues.py  site.py  version.py
bigbets/assets/: __init__.py
clankerprof/: README.md  __init__.py  analysis.py  categorize.py  cli.py  compare.py  facts.py  jsonio.py  model.py  parity.py  patterns.py  proto.py  render.py  rules.py  scopes.py  slices.py  stats.py  targets.py
clankerprof/runtime_rules/: __init__.py  generic.yml  ruby.yml  ruby_core_classes.csv
configs/: default_bayes_layer.yaml
crates/clankerprof-core/: Cargo.toml
crates/clankerprof-core/src/: categorize.rs  compare.rs  facts.rs  jsonio.rs  lib.rs  main.rs  model.rs  proto.rs  pyjson.rs  render.rs  rules.rs  scopes.rs  slices.rs  targets.rs
crates/clankerprof-core/tests/: yaml_scalar_semantics.rs
dev/env/: envrc.devenv.example
docs/: BELIEF_INPUT_REFERENCE.md  BENCHMARKS.md  BIGBETS.md  CLANKERPROF.md  CLANKERPROF_ADVERSARIAL_AUDIT.md  CLANKERPROF_PARITY.md  CLANKERPROF_RUST.md  CLANKERPROF_SAMPLE_FACTS_PLAN.md  CLANKERPROF_SLICE_AUDIT.md  CLANKERPROF_SPEC.md  CLANKERPROF_V2_PLAN.md  CLANKERPROF_V2_REQUIREMENTS.md  COMPLIANCE_MATRIX.md  DESIGN.md  GOALLOOP.md  HOST_ADAPTERS.md  INTEGRATIONS.md  ISSUE_SEEDER.md  LIVE_EXERCISES.md  LOOP_DIAGRAM.md  SPEC.md  STYLE.md  TOY_EXAMPLES.md  WHITEPAPER.md  developer-environment.md
docs/assets/: autoclanker_loop.mmd
docs/toy_examples/: README.md  __init__.py
examples/: README.md  __init__.py
examples/adapters/: autoresearch.local.yaml  cevolve.local.yaml  fixture.yaml  goalloop.local.yaml
examples/bigbets/: basic_portfolio.yaml
examples/clankergraph/: context.clankergraph.json  evidence.clankergraph.json  investigation_evidence.clankergraph.json
examples/clankerprof/: README.md  boundaries.toml  clankerprof-slices.yml  scopes.toml  slices.yml  target_config.json
examples/eval_results/: valid_eval_result.json
examples/frontiers/: parser_frontier.json
examples/human_beliefs/: basic_session.json  basic_session.yaml  expert_session.json  expert_session.yaml
goalloop/: __init__.py  cli.py  model.py
references/: README.md
schemas/: adapter_config.schema.json  clankergraph.schema.json  compiled_prior_preview.schema.json  eval_result.schema.json  frontier_input.schema.json  human_belief.schema.json  idea_belief.schema.json
scripts/: check.sh  clankerprof_v2_goal.py  run-all-test-suites.sh  run-full-test-suite.sh  run-max-live-test-suites.sh  test-integration.sh  test-live.sh  test-rust.sh  test-upstream-live.sh
tests/: __init__.py  compliance.py  compliance_matrix.json  test_adapter_protocols.py  test_advanced_belief_author_skill.py  test_anthropic_canonicalizer.py  test_bayes_quickstart.py  test_bayes_showcase.py  test_belief_contracts.py  test_bigbets_cli.py  test_canonicalization_pipeline.py  test_clankergraph.py  test_clankerprof.py  test_clankerprof_rust_parity.py  test_cli_commands.py  test_cli_flow.py  test_cli_integration.py  test_code_showcase_examples.py  test_compiler_branches.py  test_compliance_matrix.py  test_eval_contract_frontier.py  test_goalloop.py  test_live_adapters.py  test_live_exercise_examples.py  test_live_ideas_demo.py  test_live_upstreams_unit.py  test_llm_live_canonicalization.py  test_modeling.py  test_openai_compatible_canonicalizer.py  test_optimizer_benchmarks.py  test_package.py  test_session_compliance.py  test_simple_idea_inputs.py
(+630 files in other folders)
