[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoclanker"
version = "0.1.0"
description = "Bayesian guidance layer for autoresearch-style evaluation loops"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "autoclanker contributors" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["bayesian-optimization", "evolutionary-search", "cli", "autoresearch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jsonschema>=4.23.0",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pylint>=3.2.0",
    "pyright>=1.1.386",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "setuptools>=61.0",
    "wheel>=0.45",
]

[dependency-groups]
dev = [
    "build>=1.2",
    "pylint>=3.2.0",
    "pyright>=1.1.386",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "setuptools>=61.0",
    "wheel>=0.45",
]

[project.scripts]
autoclanker = "autoclanker.cli:main"

[tool.setuptools.packages.find]
include = ["autoclanker*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"autoclanker" = ["py.typed"]

[tool.setuptools.data-files]
"configs" = [
    "configs/default_adapter.yaml",
    "configs/default_bayes_layer.yaml",
]
"schemas" = [
    "schemas/adapter_config.schema.json",
    "schemas/compiled_prior_preview.schema.json",
    "schemas/eval_result.schema.json",
    "schemas/frontier_input.schema.json",
    "schemas/human_belief.schema.json",
    "schemas/idea_belief.schema.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q --cov=autoclanker --cov-report=term-missing -m 'not integration and not upstream_live and not live'"
xfail_strict = true
markers = [
    "integration: slower or end-to-end checks that are excluded from the default test lane",
    "upstream_live: real upstream smoke checks that are excluded from the self-contained gate",
    "live: billed model-provider checks that exercise actual LLM-backed canonicalization",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".local"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["autoclanker"]
combine-as-imports = true
force-single-line = false
lines-between-types = 1

[tool.pyright]
include = ["autoclanker", "tests"]
exclude = [".venv", ".mise", ".local", "build", "dist"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = false
