[package]
name = "clankerprof-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust core for clankerprof sample-facts decoding and projections"

[lib]
name = "clankerprof_core"
path = "src/lib.rs"

[[bin]]
name = "clankerprof-rs"
path = "src/main.rs"

[dependencies]
flate2 = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
