[package]
name = "clankerprof-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust core for clankerprof sample-facts decoding and projections"

[lib]
name = "clankerprof_core"
path = "src/lib.rs"

[[bin]]
name = "clankerprof-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
toml = "0.8"
